[project]
name = "hubspot-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "click>=8.3.0",
    "cssutils>=2.11.1",
    "hubspot-api-client>=12.0.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
hstools = "hstools.commands:main"


# Build

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/hstools", 
]
[tool.hatch.build.targets.sdist]
packages = ["src/hstools"]

[tool.hatch.build.targets.wheel]
packages = ["src/hstools"]

# Ruff

[tool.ruff]
# 1行の最大文字数
line-length = 128

[tool.ruff.lint]
# チェックするエラーの種類
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# 除外するエラーの種類
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904", # raise ... from ... になっていない場合のエラーを無視
]

# ファイルごとのエラー除外
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# isort の設定
[tool.ruff.lint.isort]
known-third-party = []

[tool.ruff.lint.pyupgrade]
# Python3.8互換のための設定
keep-runtime-typing = true

[tool.ruff.format]
# 公式ドキュメントに準拠した
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
